<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/desk_background"
    tools:context=".fragments.dice.DiceFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="6"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/chooseD6"
        app:layout_constraintStart_toStartOf="@+id/chooseD6"
        app:layout_constraintEnd_toEndOf="@+id/chooseD6"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="12"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/chooseD12"
        app:layout_constraintStart_toStartOf="@+id/chooseD12"
        app:layout_constraintEnd_toEndOf="@+id/chooseD12"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/chooseD20"
        app:layout_constraintStart_toStartOf="@+id/chooseD20"
        app:layout_constraintEnd_toEndOf="@+id/chooseD20"/>

    <ImageView
        android:id="@+id/chooseD6"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/d6_6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/choose_d6" />

    <ImageView
        android:id="@+id/chooseD12"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/d12_12"
        app:layout_constraintStart_toEndOf="@+id/chooseD6"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/choose_d12" />

    <ImageView
        android:id="@+id/chooseD20"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/d20_20"
        app:layout_constraintStart_toEndOf="@+id/chooseD12"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/choose_d20" />

    <ImageView
        android:id="@+id/diceImageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/d6_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424"
        android:contentDescription="@string/dice" />

    <ImageView
        android:id="@+id/startRollButton"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_play_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/start" />

</androidx.constraintlayout.widget.ConstraintLayout>